--- a/hw-01-airbnb-edi.Rmd
+++ b/hw-01-airbnb-edi.Rmd
@@ -113,10 +113,15 @@ You can find descriptions of each of the variables in the help file for the data
 3.  Create a faceted histogram where each facet represents a neighbourhood and displays the distribution of Airbnb prices in that neighbourhood. Think critically about whether it makes more sense to stack the facets on top of each other in a column, lay them out in a row, or wrap them around. Along with your visualisation, include your reasoning for the layout you chose for your facets.
 
 ````r
-ggplot(data = ___, mapping = aes(x = ___)) +
+ggplot(data = esibnb, mapping = aes(x = ___)) +
   geom_histogram(binwidth = ___) +
   facet_wrap(~___)
 ````
+```{r}
+ggplot(data = edibnb, mapping = aes(x = price)) +
+  geom_histogram(binwidth = 20) +
+  facet_wrap(~neighbourhood)
+```
 
 Let's de-construct this code:
 
