--- a/hw-01-airbnb-edi.Rmd
+++ b/hw-01-airbnb-edi.Rmd
@@ -2,6 +2,10 @@
 title: "HW 01 - Airbnb listings in Edinburgh"
 Author: "Caeden Kullander"
 output: 
+  pdf_document: 
+    latex_engine: xelatex
+    fig_height: 5
+    highlight: tango
   tufte::tufte_html:
     css: ../hw.css
     tufte_variant: "envisioned"
@@ -112,16 +116,13 @@ You can find descriptions of each of the variables in the help file for the data
 
 3.  Create a faceted histogram where each facet represents a neighbourhood and displays the distribution of Airbnb prices in that neighbourhood. Think critically about whether it makes more sense to stack the facets on top of each other in a column, lay them out in a row, or wrap them around. Along with your visualisation, include your reasoning for the layout you chose for your facets.
 
-````r
-ggplot(data = esibnb, mapping = aes(x = ___)) +
-  geom_histogram(binwidth = ___) +
-  facet_wrap(~___)
-````
 ```{r}
 ggplot(data = edibnb, mapping = aes(x = price)) +
   geom_histogram(binwidth = 20) +
-  facet_wrap(~neighbourhood)
+  facet_wrap(~neighbourhood, ncol = 7)
 ```
+
+**I arranged the facet like this becuase I thought it looked cleaner than the other ways I tried.**
 
 Let's de-construct this code:
 
@@ -133,7 +134,45 @@ Let's de-construct this code:
 🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
 4.  Use a single pipeline to identity the neighbourhoods with the top five median listing prices. Then, in another pipeline filter the data for these five neighbourhoods and make ridge plots of the distributions of listing prices in these five neighbourhoods. In a third pipeline calculate the minimum, mean, median, standard deviation, IQR, and maximum listing price in each of these neighbourhoods. Use the visualisation and the summary statistics to describe the distribution of listing prices in the neighbourhoods. (Your answer will include three pipelines, one of which ends in a visualisation, and a narrative.)
+
+
+```{r question-four}
+library(ggridges)
+edibnb %>%
+  group_by(neighbourhood) %>%
+  summarise(med_price = median(price, na.rm = TRUE))
+
+edibnb %>%
+  filter(neighbourhood == "New Town" | neighbourhood == "Old Town" | neighbourhood == "West End" | neighbourhood == "Stockbridge" | neighbourhood == "Bruntsfield") %>%
+  ggplot(edibnb, mapping = aes(x = price, y = neighbourhood, fill = neighbourhood)) +
+  geom_density_ridges(alpha = 0.6) +
+  xlim(0, 250)
+
+edibnb %>%
+  filter(neighbourhood == "New Town" | neighbourhood == "Old Town" | neighbourhood == "West End" | neighbourhood == "Stockbridge" | neighbourhood == "Bruntsfield") %>%
+  group_by(neighbourhood) %>%
+  summarise(min_price = min(price, na.rm = TRUE),
+            Mean_price = mean(price, na.rm = TRUE),
+            med_price = median(price, na.rm = TRUE),
+            IQR_price = IQR(price, na.rm = TRUE),
+            sd_price = sd(price, na.rm = TRUE),
+            max_price = max(price, na.rm = TRUE))
+```
+
+**Old Town and New Town generally have the highest prices. Stockbridge and Bruntsfield are substancially lower. West End is in the middle**
+
 5.  Create a visualization that will help you compare the distribution of review scores (`review_scores_rating`) across neighbourhoods. You get to decide what type of visualisation to create and there is more than one correct answer! In your answer, include a brief interpretation of how Airbnb guests rate properties in general and how the neighbourhoods compare to each other in terms of their ratings.
+
+```{r ratings-plot, fig.height=7, fig.width=6}
+
+ggplot(edibnb, mapping = aes(x = review_scores_rating, y = neighbourhood, fill = neighbourhood)) +
+  geom_density_ridges(alpha = 0.8) +
+  xlim(85, 100)
+
+```
+
+**Overall, the airbnbs are rated very highly, with the vast majority above 90. Most neighbourhoods have relatively similar ratings, but there are a few that stand out. Morningside and Bruntsfield, for example, have especially high ratings, while Tollcross and Southside have lower ratings.**
+
 
 🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards and review the md document on GitHub to make sure you're happy with the final state of your work.*
 
